<resources>
    <string name="app_name">MovieApp</string>
    <string name="content_description_background_image">BackgroundImage</string>
    <string name="forward_back_text_view_text">Back</string>
    <string name="forward_back_text_view_path"><![CDATA[<]]></string>
    <string name="first_star_rating">First Star Rating</string>
    <string name="two_star_rating">Two Star Rating</string>
    <string name="three_star_rating">Three Star Rating</string>
    <string name="four_star_rating">Four Star Rating</string>
    <string name="five_star_rating">Five Star Rating</string>
    <string name="storyline_title">Storyline</string>
    <string name="cast_title">Cast</string>
    <string name="image_actor_description">Image Actor</string>
    <string name="movies_list_label">Movies list</string>
    <string name="poster_movie_description">Poster Movie</string>
    <string name="like_description">like</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="popular_menu_label">Popular</string>
    <string name="top_rated_menu_label">Top rated</string>
    <string name="now_playong_menu_label">Now playong</string>
    <string name="up_coming_menu_label">Up Coming</string>
    <string name="search_menu_label">Search</string>
    <string name="error_data_loading_snckbar_message">Error Data Loading</string>
    <string name="default_list_type_label">Popular</string>
    <string name="enter_text_hint_label">Enter text</string>
    <string name="start_typing_in_a_search_bar_to_find_a_movie">Start typing in a search bar to find a movie</string>
    <string name="name_channel_notifications">movies</string>
    <string name="channel_description_notification">shows the film with the highest rating</string>
    <string name="calendar_permission_granted_label">Calendar permission granted</string>
    <string name="calendar_permission_not_granted_label">Calendar permission not granted</string>
    <string name="message_permission_dialog">To continue please grant access to calendar</string>
    <string name="positive_button_label">OK</string>
    <string name="negative_button_label">Cancel</string>
    <string name="message_denied_permission">This feature is not available without calendar permissions. Open app settings?</string>
    <string name="watch_movie_label_calendar">Watching movie</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
    <string name="settings_label">Settings</string>
    <string name="enable_dark_theme_label_checkbox">Enable Dark Theme</string>
    <string name="title_font_size_small">Small</string>
    <string name="title_font_size_medium">Medium</string>
    <string name="title_font_size_big">Big</string>
    <string name="font_size_settings_label">Font Size</string>
    <string name="margins_settings_label">Margins</string>
    <string name="card_style_settings_label">Card style</string>
    <string name="rounded_settings_label">Rounded</string>
    <string name="flat_settings_label">Flat</string>
    <string name="error_label">There was an error</string>
    <string name="no_items_label">No Items</string>
    <string name="no_info_label">No info for movie</string>
</resources>